--- a/style.css
+++ b/style.css
@@ -1,26 +1,25 @@
 .container {
   display: grid;
-  /* 3 x 2 = 3 row and 2 columns */
-
-  /* Define the number and size of rows */
-  /* grid-template-rows: 100px 100px 100px; */
-
-  /* Defining the number and size of columns */
-  /* grid-template-columns: 100px 100px; */
-
-  /* Better approach */
-  /* grid-template-rows: repeat(3, 100px); */
-  /* grid-template-columns: repeat(2, 100px); */
-
-  /* Short hand syntax - rows and columns */
   grid-template: repeat(3, 100px) / repeat(2,100px);
-
   border: 3px solid lightgrey;
+  /* justify-items: center; Default value Streatch */
+  /* align-items: center; Default value Streatch */
+
+  /* Align grid inside a container*/
+  /* justify-content: center;
+  align-content: center; */
+  height: 100vh;
 }
 
 .box {
-  width: 5rem;
-  height: 5rem;
+  /* width: 5rem; */
+  /* height: 5rem; */
   background: gold;
 }
 
+  /* GRID ALIGNMENT ITEMS */
+  
+  /* default aligned top left */
+
+  /* justify-items - :horizontal x */
+  /* align-items - :vertical y */
