--- a/style.css
+++ b/style.css
@@ -2,8 +2,11 @@
   display: grid;
   /* row and columns */
   grid-template: 100px auto 100px / 30fr 70fr;
-  /* row-gap: 10px;
-  column-gap: 10px; */
+  grid-template-areas: 
+  "header header" 
+  "sidebar main " 
+  ". footer";
+  /* "footer footer"; */
   gap: 10px;
   border: 3px solid lightgrey;
   height: 100vh;
@@ -11,4 +14,13 @@
 
 .box {
   background: gold;
+}
+
+.box-one {
+  grid-column: 1 / 3;
+  grid-area: header;
+}
+
+.box-four {
+  grid-area: footer;
 }
